# ChangeLog for dev-java/javacc
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/javacc/ChangeLog,v 1.35 2011/08/12 16:02:22 xarthisius Exp $

  12 Aug 2011; Kacper Kowalik <xarthisius@gentoo.org> javacc-4.0-r4.ebuild:
  ppc64 stable wrt #355085

  20 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org> javacc-4.2.ebuild:
  Marked ~ppc64 wrt #355353

  29 Jan 2011; Miroslav Šulc <fordfrog@gentoo.org> javacc-5.0.ebuild:
  Did some fixes with regard to jdk version in the ebuild, but it still fails
  tests

  21 Mar 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> javacc-4.2.ebuild:
  x86 stable wrt bug #309265

*javacc-5.0 (16 Mar 2010)

  16 Mar 2010; Alistair Bush <ali_bush@gentoo.org> +javacc-5.0.ebuild:
  Version Bump javacc to 5.0

  21 Jun 2009; Vlastimil Babka <caster@gentoo.org> javacc-4.2.ebuild:
  Fix building with ecj (bug #249288) and depend on 1.5 jdk only when tests
  enabled.

*javacc-4.2 (28 Apr 2009)

  28 Apr 2009; Alistair Bush <ali_bush@gentoo.org> +javacc-4.2.ebuild:
  Version Bump. Thanks to Alex Busenius <the_unknown@gmx.net> for the bug
  report and initial work.

  10 Jan 2008; Vlastimil Babka <caster@gentoo.org> javacc-4.0-r4.ebuild:
  Restrict junit dependency.

  24 Oct 2007; William L. Thomson Jr. <wltjr@gentoo.org> -files/javacc-3.2,
  -files/javacc.sh-3.2, -files/jjdoc-3.2, -files/jjtree-3.2,
  -files/javacc-3.2-javadoc.patch, -javacc-3.2-r3.ebuild,
  javacc-4.0-r4.ebuild:
  Removed java gen 1 ebuild, quoted vars.

  10 Aug 2007; Petteri Räty <betelgeuse@gentoo.org> -javacc-4.0-r3.ebuild:
  Remove unused revision.

  10 Aug 2007; William L. Thomson Jr. <wltjr@gentoo.org>
  javacc-4.0-r4.ebuild:
  amd64 stable, bug #184561

  10 Aug 2007; Petteri Räty <betelgeuse@gentoo.org> javacc-3.2-r3.ebuild:
  The 3.2 tarball was renamed upstream. Fixes bug #186182.

  15 Jul 2007; nixnut <nixnut@gentoo.org> javacc-4.0-r4.ebuild:
  Stable on ppc wrt bug 184561
