@@ -4,14 +4,14 @@ Hash: SHA1
 AUX javacc-4.0-javadoc.patch 420 RMD160 c6f5a4eae5171a56c2c4e97b2acd1173474c140d SHA1 0850545426fd8f5ee557abe6f7b2399c24f3bf50 SHA256 4bef6b418576e68921583a28e9ec7789ddea35c8b8b7b2a9a7e8803c2c67774d
 DIST javacc-4.2src.tar.gz 843455 RMD160 4ba13c1bb9ca938967aa528178b5fcb6e59eeb20 SHA1 77c69c13544d78402c0484e78574f7bd3dd10de4 SHA256 504d452ea1904e5b3a2728cbcacf0b9916630bd2ba746112104f741cec230139
 DIST javacc-5.0src.tar.gz 810123 RMD160 982c63a8b2e9fbec6a19bd110344c3a9547a7577 SHA1 41159a705cf118f8e8c687a2fe2e923361ab35f7 SHA256 766cae9d3710054f452a7f0779db885eacfdae363152cb2e7fe025aa7ea17370
-EBUILD javacc-4.2.ebuild 1934 RMD160 c9320736880791f4140ee72cff854ce49d10d0e6 SHA1 838e11c1dc754b26aab3b952f69938b711ab922f SHA256 3de9a6743a9ae4d20f99f4b20ec4ead0efa4ba4d463d93da742bf6e6dcbfea8d
-EBUILD javacc-5.0.ebuild 1766 RMD160 8f55216d062ff213f50b9daf5a7e13f37e56d1f8 SHA1 f1053138755eccead68141c0015aa2e77bb00e70 SHA256 b48db996f500954511bebd8821ac9c797e22aceb26f0bb5878a736822989e587
-MISC ChangeLog 5507 RMD160 c1e47812c1ec625f1ad16763f4f85e9f079180ca SHA1 0f39a093090337749d4ccafd02ed6949d7b45fe3 SHA256 2b40d96813621ae81ba25ff2b3f91b9eaebdd8f22e066f5981b3a23dac0a5ab8
+EBUILD javacc-4.2.ebuild 1932 RMD160 cd8727784c309e8b02ab10e5b4c7723869d11f12 SHA1 e648d74b5bbbe66d764ae495896e29f813721a1f SHA256 7efcbe92097f93822c26057c4f374bbc372c6de45462104d5bee992c7230dcc3
+EBUILD javacc-5.0.ebuild 1761 RMD160 70746225478888f3dabbbd3ed56def556c11f41f SHA1 2c75c8f9379f4fcdd2d73aeb503ef3c1103b8b60 SHA256 6a8c2b24a2bd30f70beb3ed9b11831967babcae2711355be7df10ca81906dba2
+MISC ChangeLog 5740 RMD160 84fd2569ab8da3d7d2c9eb1f15cbf7c489ff5520 SHA1 857ebbffaa98f5332c889eb2031a69b48263162b SHA256 8c7cc0128108e85f7363c1ded05ef2ee780fe1e03cc3920aa73207d072975330
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (Darwin)
+Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk5aTSwACgkQX3X2B8XHTon1LwCfbS+/eOfxGbQktvb5+3RnUXfp
-1isAn3xkf84Ob/yLGHI99rmMkJHxvrhy
-=xKTH
+iEYEARECAAYFAk+2ieoACgkQX3X2B8XHTonJqACePOnxFd6s2NA+v2sLnZkXqLKN
+x0sAn3UsPjnBLxjgdFI1qid/X8EWlNUf
+=BPlz
 -----END PGP SIGNATURE-----
