@@ -1,9 +1,9 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/javacc/javacc-4.2.ebuild,v 1.4 2011/02/20 14:40:20 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/javacc/javacc-4.2.ebuild,v 1.6 2012/05/12 03:17:50 aballier Exp $
 
-JAVA_PKG_IUSE="doc examples source test"
 EAPI="2"
+JAVA_PKG_IUSE="doc examples source test"
 
 inherit java-pkg-2 java-ant-2 eutils
 
